syntax = "proto3";

package ampb;

import "ampb/anime_movie.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message UpdateAnimeMovieRequest { 
    int64 AnimeID = 1;
    optional string originalTitle = 2;
    optional google.protobuf.Timestamp aired = 3;
    optional int32 releaseYear = 4;
    optional string rating = 5;
    optional google.protobuf.Duration duration = 6;
}

message UpdateAnimeMovieResponse { 
    AnimeMovieResponse animeMovie = 1;
}