syntax = "proto3";

package aspb;

import "aspb/anime_serie.proto";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message UpdateAnimeSerieRequest { 
    int64 AnimeID = 1;
    optional string originalTitle = 2;
    optional google.protobuf.Timestamp aired = 3;
    optional int32 releaseYear = 4;
    optional string rating = 5;
    optional string portriatPoster = 6;
    optional string portriatBlurHash = 7;
    optional string landscapePoster = 8;
    optional string landscapeBlurHash = 9;
}

message UpdateAnimeSerieResponse { 
    AnimeSerieResponse animeSerie = 1;
}