syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb";


message Genre {
    int32 genreID = 1;
    string genreName = 2;
    google.protobuf.Timestamp createdAt = 3;
  }
  
  message AnimeGenresRequest {
    repeated int32 genreID = 1;
  }
  
  message AnimeGenresResponse {
    repeated Genre genres = 1;
  }